--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -64,7 +64,7 @@
           <h2>Analytics</h2>
         </div>
         <div class="table-responsive table-card-responsive">
-          <mattgraph width="150" height="150" type="pie" name="test1"></mattgraph>
+          <canvas id="bar" class="chart chart-bar" chart-data="data" chart-labels="labels"></canvas>
         </div>
       </div>
     </div>
