--- a/src/views/dashboard.help.product.html
+++ b/src/views/dashboard.help.product.html
@@ -6,7 +6,7 @@
     <div class="panel-body">
       <div class="row">
         <div class="col-lg-6">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/gZc3pfHLUIE?rel=0" frameborder="0" allowfullscreen></iframe>
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/QqciVG9io3Y?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="col-lg-6">
           <h4>Please refer to this video for a demonstration on how to add a seafood product.</h4>
