--- a/src/views/dashboard.help.inventory.html
+++ b/src/views/dashboard.help.inventory.html
@@ -6,7 +6,7 @@
     <div class="panel-body">
       <div class="row">
         <div class="col-lg-6">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/nbjY4xEm8-k?rel=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/S9AxZHUVq0k?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="col-lg-6">
           <h4>Please refer to this video for a demonstration on how to add an inventory batch.</h4>
@@ -21,7 +21,7 @@
     <div class="panel-body">
       <div class="row">
         <div class="col-lg-6">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/69UXciBY2gA?rel=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/KTnHqQa3qSw?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="col-lg-6">
           <h4>Please refer to this video for a demonstration on how to move your inventory batches.</h4>
