--- a/src/views/dashboard.help.orders-invoices.html
+++ b/src/views/dashboard.help.orders-invoices.html
@@ -6,7 +6,7 @@
     <div class="panel-body">
       <div class="row">
         <div class="col-lg-6">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/cQ4Pl2Bwm9M?rel=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Z-aqTQqIZBQ?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="col-lg-6">
           <h4>Please refer to this video for a demonstration on how to add a customer order and auto-generate an invoice.</h4>
@@ -21,7 +21,7 @@
     <div class="panel-body">
       <div class="row">
         <div class="col-lg-6">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/qKshU95nXkw?rel=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/hh2Wq-ZD7xU?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="col-lg-6">
           <h4>Please refer to this video for a demonstration on how to manage your orders and export invoices and sales data to Excel or PDF.</h4>
