--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -64,7 +64,8 @@
           <h2>Analytics</h2>
         </div>
         <div class="table-responsive table-card-responsive">
-          <canvas id="bar" class="chart chart-bar" chart-data="data" chart-labels="labels"></canvas>
+          <canvas id="bar" class="chart chart-bar" chart-data="bar_data" chart-labels="bar_labels"></canvas>
+          <canvas id="line" class="chart chart-line" chart-data="line_data" chart-labels="line_labels"></canvas>
         </div>
       </div>
     </div>
