Negative revenue fix

--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -68,7 +68,7 @@
         </div>
         <div class="table-responsive table-card-responsive">
           <canvas id="bar" class="chart chart-bar" chart-data="bar_data" chart-labels="bar_labels"></canvas>
-          <canvas id="line" class="chart chart-line" chart-data="line_data" chart-labels="line_labels"></canvas>
+          <canvas id="line" class="chart chart-line" chart-data="line_data" chart-labels="line_labels" chart-options="line_options"></canvas>
         </div>
       </div>
     </div>
