--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -67,8 +67,9 @@
           </div>
         </div>
         <div class="table-responsive table-card-responsive">
+          <!-- I hard coded straight lines into src/lib/angular-chart.js -->
           <canvas id="bar" class="chart chart-bar" chart-data="bar_data" chart-labels="bar_labels"></canvas>
-          <canvas id="line" class="chart chart-line" chart-data="line_data" chart-labels="line_labels" chart-options="line_options"></canvas>
+          <canvas id="line" class="chart chart-line" chart-data="line_data" chart-labels="line_labels"></canvas>
         </div>
       </div>
     </div>
