--- a/src/views/dashboard.default.overview.html
+++ b/src/views/dashboard.default.overview.html
@@ -1,5 +1,26 @@
 <div ng-controller="OverviewCtrl">
   <div class="col-lg-10 main">
+     <div class="col-lg-12">
+      <div class="card-panel">
+         <div class="card-panel-header">
+          <h2>Analytics</h2>
+          <div class="card-panel-options">
+              <button class="btn-status-success" href="javascript:void(0);" ng-click="addFilter()"><i class="fa fa-filter"></i> Filter</button>
+          </div>
+         </div>
+         <div class="table-responsive table-card-responsive">
+          <!-- I hard coded straight lines into src/lib/angular-chart.js -->
+          <div class="col-lg-6">
+              <center><h3>Revenue Per Product</h3><p></p></center>
+              <canvas id="bar" class="chart chart-bar" chart-data="bar_data" chart-labels="bar_labels"></canvas>
+          </div>
+          <div class="col-lg-6">
+            <center><h3>Revenue Per Month</h3><p></p></center>
+          <canvas id="line" class="chart chart-line" chart-data="line_data" chart-labels="line_labels"></canvas>
+          </div>
+         </div>
+      </div>
+     </div>
     <div class="col-lg-6">
       <div class="card-panel">
         <div class="card-panel-header">
@@ -55,21 +76,6 @@
               </tr>
             </tbody>
           </table>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-12">
-      <div class="card-panel">
-        <div class="card-panel-header">
-          <h2>Analytics</h2>
-          <div class="card-panel-options">
-             <button class="btn-status-success" href="javascript:void(0);" ng-click="addFilter()"><i class="fa fa-filter"></i> Filter</button>
-          </div>
-        </div>
-        <div class="table-responsive table-card-responsive">
-          <!-- I hard coded straight lines into src/lib/angular-chart.js -->
-          <canvas id="bar" class="chart chart-bar" chart-data="bar_data" chart-labels="bar_labels"></canvas>
-          <canvas id="line" class="chart chart-line" chart-data="line_data" chart-labels="line_labels"></canvas>
         </div>
       </div>
     </div>
