last push b4 prod

--- a/src/views/dashboard.help.ecommerce.html
+++ b/src/views/dashboard.help.ecommerce.html
@@ -1,7 +1,7 @@
 <div class="col-lg-10 main">
   <div class="card-panel">
     <div class="card-panel-header">
-      <h2>Moving an Inventory Batch</h2>
+      <h2>E-commerce Tutorial</h2>
     </div>
     <div class="panel-body">
       <div class="row">
