--- a/src/views/dashboard.help.html
+++ b/src/views/dashboard.help.html
@@ -7,7 +7,7 @@
     <li><a ng-class="{activeTab: state.includes('dashboard.help.orders-invoices')}" ui-sref=".orders-invoices">Orders</a></li>
     <li><a ng-class="{activeTab: state.includes('dashboard.help.customer')}" ui-sref=".customer">Customers</a></li>
     <li><a ng-class="{activeTab: state.includes('dashboard.help.catch-history')}" ui-sref=".catch-history">Catch History</a></li>
-    <li><a ng-class="{activeTab: state.includes('dashboard.help.catch-history')}" ui-sref=".ecommerce">E-commerce</a></li>
+    <li><a ng-class="{activeTab: state.includes('dashboard.help.ecommerce')}" ui-sref=".ecommerce">E-commerce</a></li>
   </ul>
 </div>
 
