--- a/src/views/login.html
+++ b/src/views/login.html
@@ -19,6 +19,9 @@
               <div class="panel-login-error" ng-show="usernameRequired || passwordRequired">
                 <p class="text-center">The credentials below are incorrect. Please try again.</p>
               </div>
+              <div class="panel-login-error" ng-show="trialExpired">
+                <p class="text-center">Your trial has expired.</p>
+              </div>
               <h3 class="text-center">Welcome Back!</h3>
               <br>
               <fieldset>
