Added whole units

--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -108,6 +108,7 @@
               <option value="lbs">lbs</option>
               <option value="half lbs">1/2 lbs</option>
               <option value="kg">kg</option>
+              <option value="whole units">whole units</option>
             </select>
           </div>
           <div class="col-lg-6">
