--- a/src/views/dashboard.help.supply-chain.html
+++ b/src/views/dashboard.help.supply-chain.html
@@ -6,7 +6,7 @@
     <div class="panel-body">
       <div class="row">
         <div class="col-lg-6">
-          <iframe width="560" height="315"  src="https://www.youtube.com/embed/CuVhVQTmkRE?rel=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="560" height="315"  src="https://www.youtube.com/embed/ga762iYZjLk?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="col-lg-6">
           <h4>Please refer to this video for a demonstration on how to add a custom supply chain.</h4>
