Tutorial ui, steps, arrows

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -9,6 +9,7 @@
 @import 'components/panel';
 @import 'components/sidebar';
 @import 'components/table';
+@import 'components/tutorial';
 
 //@import 'utils/mixins';
 
