Language, style changes

--- a/src/css/components/_tutorial.scss
+++ b/src/css/components/_tutorial.scss
@@ -14,7 +14,7 @@
    border-radius: 2px;
    border-bottom: none;
 
-   background: #fff;
+   background: $secondary-background-color;
 
    box-shadow: 0 1px 3px rgba(0,0,0,0.15), 0 1px 2px rgba(0,0,0,0.30);
 }
