--- a/src/views/dashboard.default.html
+++ b/src/views/dashboard.default.html
@@ -1,12 +1,12 @@
 <div class="col-sm-3 col-md-2 sidebar">
     <ul ng-controller="SideNavCtrl" class="nav nav-sidebar">
-        <li><a ng-class="{activeTab: state.includes('dashboard.default.overview')}" ui-sref=".overview">Overview <div ng-show="tutorial.pointer('overview')" class="tutorial-pointer-right"></div></a></li>
-        <li><a ng-class="{activeTab: state.includes('dashboard.default.products')}" ui-sref=".products">Products <div ng-show="tutorial.pointer('products')" class="tutorial-pointer-right"></div></a></li>
-        <li><a ng-class="{activeTab: state.includes('dashboard.default.supply-chain')}" ui-sref=".supply-chain.menu">Supply Chain <div ng-show="tutorial.pointer('supply-chain')" class="tutorial-pointer-right"></div></a></li>
-        <li><a ng-class="{activeTab: state.includes('dashboard.default.inventory')}" ui-sref=".inventory.menu">Inventory <div ng-show="tutorial.pointer('inventory')" class="tutorial-pointer-right"></div></a></li>
-        <li><a ng-class="{activeTab: state.includes('dashboard.default.orders')}" ui-sref=".orders.menu">Orders <div ng-show="tutorial.pointer('orders')" class="tutorial-pointer-right"></div></a></li>
-        <li><a ng-class="{activeTab: state.includes('dashboard.default.customers')}" ui-sref=".customers.menu">Customers <div ng-show="tutorial.pointer('customers')" class="tutorial-pointer-right"></div></a></li>
-        <li><a ng-class="{activeTab: state.includes('dashboard.default.ecommerce')}" ui-sref=".ecommerce">E-commerce <div ng-show="tutorial.pointer('ecommerce')" class="tutorial-pointer-right"></div></a></li>
+        <li><a ng-class="{activeTab: state.includes('dashboard.default.overview')}" ui-sref=".overview">Overview </a></li>
+        <li><a ng-class="{activeTab: state.includes('dashboard.default.products')}" ui-sref=".products">Products </a></li>
+        <li><a ng-class="{activeTab: state.includes('dashboard.default.supply-chain')}" ui-sref=".supply-chain.menu">Supply Chain</a></li>
+        <li><a ng-class="{activeTab: state.includes('dashboard.default.inventory')}" ui-sref=".inventory.menu">Inventory </a></li>
+        <li><a ng-class="{activeTab: state.includes('dashboard.default.orders')}" ui-sref=".orders.menu">Orders </a></li>
+        <li><a ng-class="{activeTab: state.includes('dashboard.default.customers')}" ui-sref=".customers.menu">Customers </a></li>
+        <li><a ng-class="{activeTab: state.includes('dashboard.default.ecommerce')}" ui-sref=".ecommerce">E-commerce</a></li>
     </ul>
 </div>
 
