--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -18,7 +18,7 @@
           <li class="hide"><a ui-sref=".default.products">Products</a></li>
           <li class="hide"><a ui-sref=".default.supply-chain.menu">Supply Chain</a></li>
           <li class="hide"><a ui-sref=".default.inventory.menu">Inventory</a></li>
-          <li class="hide"><a ui-sref=".default.ecommerce.track">Sales</a></li>
+          <li class="hide"><a ui-sref=".default.ecommerce">Sales</a></li>
           <li class="hide"><a ui-sref=".default.orders.menu">Orders</a></li>
           <li class="hide"><a ui-sref=".default.customers.menu">Customers</a></li>
 
