--- a/src/css/components/_tutorial.scss
+++ b/src/css/components/_tutorial.scss
@@ -1,63 +1,152 @@
 #tutorial-bar {
-   position: fixed;
-   left: 22%;
-   bottom: -1px;
-
-   width: 56%;
-   min-height: 50px;
-   line-height: 50px;
-
-   text-align:center;
-   font-weight: 300;
-
-   border: 1px solid $navbar-color;
-   border-radius: 2px;
-   border-bottom: none;
-
-   background: $secondary-background-color;
-
-   box-shadow: 0 1px 3px rgba(0,0,0,0.15), 0 1px 2px rgba(0,0,0,0.30);
+    position: absolute;
+    bottom: -1px;
+    margin-left: -500px;
+    left: 50%;
+    width: 1000px;
+    min-height: 50px;
+    line-height: 50px;
+    text-align: center;
+    font-weight: 300;
+    border: 1px solid $navbar-color;
+    border-radius: 2px;
+    border-bottom: none;
+    background: $secondary-background-color;
+    z-index: 99999999;
 }
+@media screen and (max-width: 1100px) {
+  #tutorial-bar {
+    margin-left: -350px;
+    left: 50%;
+    width: 700px;
+  }
+  .tutorial-button {
+      height: 100%;
+      vertical-align: center;
+      background-color: $navbar-color;
+      padding: 0 10px;
+      color: #fff;
+      font-weight: 100;
+      // no select
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      &:hover {
+          background-color: $btn-default-hover-color;
+          cursor: pointer;
+      }
+  }
+}
+@media screen and (max-width: 750px) {
+  #tutorial-bar {
+    display: none;
+  }
 
-#tutorial-back { float: left; }
-#tutorial-forward { float: right; }
 
+}
+#tutorial-back {
+    float: left;
+}
+#tutorial-forward {
+    float: right;
+}
 .tutorial-button {
-   height: 100%;
-   vertical-align: center;
-   background-color: $navbar-color;
-   padding: 0px 20px 0px 20px;
-   color: #fff;
-   font-weight: 100;
-
-   // no select
-   -webkit-touch-callout: none;
-   -webkit-user-select: none;
-   -khtml-user-select: none;
-   -moz-user-select: none;
-   -ms-user-select: none;
-   user-select: none;
-
-   &:hover {
-      background-color: $btn-default-hover-color;
-      cursor: pointer;
-   }
+    height: 100%;
+    vertical-align: center;
+    background-color: $navbar-color;
+    padding: 0 20px;
+    color: #fff;
+    font-weight: 100;
+    // no select
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    &:hover {
+        background-color: $btn-default-hover-color;
+        cursor: pointer;
+    }
+}
+.tutorial-pointer-right {
+    display: inline-block;
+    position: relative;
+    width: 10px;
+    height: 10px;
+    &:after {
+        content: '';
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        background-color: #f00;
+        left: 10px;
+    }
+}
+.tutorial-input {
+    border: 2px solid red;
+    border-radius: 2px;
+    width: 100%;
+    max-width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    font-size: 14px;
+    width: 100%;
 }
 
-.tutorial-pointer-right {
-   display: inline-block;
-   position: relative;
-   width: 10px;
-   height: 10px;
+.btn-tutorial-success {
+  @include border-radius(1px);
+  color: $secondary-background-color;
+  border: 2px solid red;
+  background-color: $btn-success-color;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 2px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  outline: none;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  font-weight: 300;
+  letter-spacing: 0.02em;
+}
 
-   &:after {
-      content: '';
-      position: absolute;
+.btn-tutorial-default {
+  @include border-radius(1px);
+  color: $secondary-background-color;
+  background-color: $btn-default-color;
+  border: 2px solid red;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 2px 2px 4px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  outline: none;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  font-weight: 300;
+  letter-spacing: 0.02em;
+}
 
-   	width: 10px;
-      height: 10px;
-      background-color: #f00;
+.btn-tutorial-danger {
+  background-color: $btn-danger-color;
+  @include border-radius(1px);
+  color: $secondary-background-color;
+  border: 2px solid yellow;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 2px 2px 4px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  outline: none;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  font-weight: 300;
+  letter-spacing: 0.02em;
+}
 
-      left: 10px;
-   }
+.tutorial-border {
+  border: 2px solid yellow;
+
 }
