--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -4,10 +4,10 @@
         <h2>Supply Chains</h2>
         <div class="card-panel-options">
           <div class="col-lg-12 invisible-block">Invisible</div>
-          <button class="btn-status-success" ng-click="createNewSupplyChain()"><i class="fa fa-plus"></i> Add</button>
-          <button class="btn-status-default" ng-click="editSupplyChain(selectedSupplyChain)"><i class="fa fa-pencil"></i> Edit</button>
+          <button class="{{tutorial.pointer('add') ? 'btn-tutorial-success' : 'btn-status-success'}}" ng-click="createNewSupplyChain()"><i class="fa fa-plus"></i> Add</button>
+          <button class="{{tutorial.pointer('edit') ? 'btn-tutorial-default' : 'btn-status-default'}}" ng-click="editSupplyChain(selectedSupplyChain)"><i class="fa fa-pencil"></i> Edit</button>
           <button ng-click="renameSupplyChain(selectedSupplyChain)" class="btn-status-default"><i class="fa fa-font"></i> Rename</button>
-          <button ng-click="deleteSupplyChain(selectedSupplyChain)" class="btn-status-danger"><i class="fa fa-trash"></i> Delete</button>
+          <button ng-click="deleteSupplyChain(selectedSupplyChain)" class="{{tutorial.pointer('delete') ? 'btn-tutorial-danger' : 'btn-status-danger'}}"><i class="fa fa-trash"></i> Delete</button>
         </div>
       </div>
       <div class="table-responsive table-card-responsive">
