--- a/src/views/dashboard.settings.fishery.html
+++ b/src/views/dashboard.settings.fishery.html
@@ -15,13 +15,13 @@
                 </div>
                 <div class="col-lg-4">
                  <label>Fishery Logo</label>
-                 <input class="form-control" type="file" ngf-select ng-model="file" name="file">
+                 <input class="{{tutorial.pointer('logo') ? 'tutorial-input' : 'form-control'}}" type="file" ngf-select ng-model="file" name="file">
                  <small class="text-muted">PNG and JPG files only</small>
                  <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}"></div>
                 </div>
                 <div class="col-lg-4">
                   <label>Tax Number (i.e. HST #)</label>
-                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" placeholder="ex. 896437985" ng-model="taxNumber" type="text"></input>
+                  <input class="{{tutorial.pointer('logo') ? 'tutorial-input' : 'form-control'}}" ng-disabled="(isLoading || isDisabled)" placeholder="ex. 896437985" ng-model="taxNumber" type="text"></input>
                 </div>
               </fieldset>
             </div>
@@ -65,12 +65,12 @@
               <fieldset class="form-group">
                 <div class="col-lg-4">
                   <label>Shop Web URL</label>
-                  <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="shopName" type="text" placeholder="ex. myshop (lower case)"></input>
+                  <input class="{{tutorial.pointer('url') ? 'tutorial-input' : 'form-control'}}" ng-disabled="(isLoading || isDisabled)" ng-model="shopName" type="text" placeholder="ex. myshop (lower case)"></input>
                   <small class="text-muted">This is the url for your shop. Example: "myshop" will result in "myshop.coastlinemarket.com"</small>
                 </div>
                 <div class="col-lg-8">
                   <label>Invoice Purchase Disclaimer</label>
-                  <textarea ng-disabled="(isLoading || isDisabled)" class="form-control" type="text" name="disclaimer" ng-model="disclaimer" placeholder="ex. TERMS: Due to the nature of seafood, please check your order immediately.
+                  <textarea ng-disabled="(isLoading || isDisabled)" class="{{tutorial.pointer('logo') ? 'tutorial-input' : 'form-control'}}" type="text" name="disclaimer" ng-model="disclaimer" placeholder="ex. TERMS: Due to the nature of seafood, please check your order immediately.
       1. All quality problems must be reported to your sales rep within 12 hours.
       2. Any short shipments must be marked on carrier's waybill or if delivered by our truck on the delivery copy of the invoice.
       3. Any shrink or mortality in excess of allowable amounts must be reported within 12 hours.
