--- a/src/views/dashboard.settings.general.html
+++ b/src/views/dashboard.settings.general.html
@@ -42,8 +42,7 @@
                     <label>Full Name</label>
                   </div>
                   <div class="col-lg-9">
-                    <input class="form-control" ng-disabled="isLoading" ng-model="name" type="text" placeholder="No name registered." ng-disabled="isSaving"></input>
-                  </div>
+                    <input class="{{tutorial.pointer('inputs') ? 'tutorial-input' : 'form-control'}}" ng-model="name" type="text" placeholder="No name registered." ng-disabled="isSaving || isLoading"></input></div>
                 </div>
               </fieldset>
 
@@ -53,7 +52,7 @@
                     <label>Phone Number</label>
                   </div>
                   <div class="col-lg-9">
-                    <input class="form-control" ng-disabled="isLoading" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="No phone number registered." ng-disabled="isSaving"></input>
+                    <input class="{{tutorial.pointer('inputs') ? 'tutorial-input' : 'form-control'}}" ng-disabled="isLoading" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="No phone number registered." ng-disabled="isSaving"></input>
                   </div>
                 </div>
               </fieldset>
